[tool.poetry]
name = "streamlitExplore"
version = "0.1.0"
description = ""
authors = ["Frostbite22 <landoulsiferes@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
